Some broken fonts specify a negative subscript offset, use the absolute value for compat reasons. b=410917 r=vladimir sr=pavlov a=beltzner